# trace_paper

./: .gitignore  README.md  pyproject.toml  requirements.txt
examples/: rd_pvalues_example.py  volcano_plot_example.py
helper_data/: atc_dict.txt  atc_dict_en.csv
main/: README.md  compute_pooled_pvalues.py  create_risk_ratio_volcano_plot.py  create_volcano_plot.py  helpers.py  std_combine.md
mikkel_ipynb/: extract_tables.ipynb  plot_forest.ipynb  plot_manhattan.ipynb  plot_radar.ipynb
tests/: test_io.py  test_pooling_methods.py  test_statistics.py  test_volcano.py
trace/: __init__.py  constants.py  diagnostics.py  io.py  statistics.py
trace/plotting/: __init__.py  confusion.py  correlation.py  volcano.py  volcano_plotly.py
