[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "trace-paper"
version = "0.1.0"
description = "Risk difference analysis and volcano plot visualization for TRACE paper"
readme = "README.md"
requires-python = ">=3.8"
dependencies = [
    "-r requirements.txt",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "jupyter>=1.0.0",
]

[tool.setuptools.packages.find]
where = ["."]
include = ["trace*"]

